@@ -25,8 +25,10 @@ import java.io.IOException;
  * Subclass if exception is not meant to be retried: e.g.
  * {@link UnknownScannerException}
  */
-@SuppressWarnings("serial")
 public class DoNotRetryIOException extends IOException {
+
+  private static final long serialVersionUID = 1197446454511704139L;
+
   /**
    * default constructor
    */
