@@ -22,9 +22,10 @@ package org.apache.hadoop.hbase;
 /**
  * Thrown when a value is longer than the specified LENGTH
  */
-@SuppressWarnings("serial")
 public class ValueOverMaxLengthException extends DoNotRetryIOException {
   
+  private static final long serialVersionUID = -5525656352372008316L;
+
   /**
    * default constructor
    */
